--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 A little narrative on my daily life activity
               </p>
 
-              <a href="videos/ppg_video.mp4">Video</a>
+              <a href="videos\PPG_video_update.mp4">Video</a>
             </div>
           </div>
 
