--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="card-img-overlay">
               <h5 class="card-title dog-title">5 October 2023</h5>
               <p class="card-text">A sneakpeak on my extended family</p>
-              <a href="">Video</a>
+              <a href="videos\PPG_second_vid.mp4">Video</a>
             </div>
           </div>
           <div class="col card text-bg-dark">
