--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="card-img-overlay">
               <h5 class="card-title dog-title">5 October 2023</h5>
               <p class="card-text">A sneakpeak on my extended family</p>
-              <a href="videos\PPG_second_vid.mp4">Video</a>
+              <a href="">Video</a>
             </div>
           </div>
           <div class="col card text-bg-dark">
@@ -77,22 +77,5 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-    <script>
-      function readFunction() {
-        var dots = document.getElementById("dots");
-        var moreText = document.getElementById("more_text");
-        var btnText = document.getElementById("btn_text");
-
-        if (dots.style.display === "none") {
-          dots.style.display = "inline";
-          btnText.innerHTML = "Read more";
-          moreText.style.display = "none";
-        } else {
-          dots.style.display = "none";
-          btnText.innerHTML = "Read less";
-          moreText.style.display = "inline";
-        }
-      }
-    </script>
   </body>
 </html>
