--- a/index.html
+++ b/index.html
@@ -54,7 +54,19 @@
             <div class="card-img-overlay">
               <h5 class="card-title dog-title">5 October 2023</h5>
               <p class="card-text">A sneakpeak on my extended family</p>
-              <a href="">Video</a>
+              <a href="videos\PPG_second_vid.mp4">Video</a>
+            </div>
+          </div>
+          <div class="col card text-bg-dark">
+            <img
+              src="pictures\food_background.png"
+              class="card-img"
+              alt="..."
+            />
+            <div class="card-img-overlay">
+              <h5 class="card-title">7 October 2023</h5>
+              <p class="card-text">A short perspective on food</p>
+              <a href="videos\PPG_video_FOOD.mp4">Video</a>
             </div>
           </div>
           <div class="col card text-bg-dark">
@@ -64,9 +76,17 @@
               alt="..."
             />
             <div class="card-img-overlay">
-              <h5 class="card-title">7 October 2023</h5>
-              <p class="card-text">Another sneakpeak on my cute doggies</p>
-              <a href="">Video</a>
+              <h5 class="card-title">11 October 2023</h5>
+              <p class="card-text">Another sneakpeak on my doggies</p>
+              <a href="videos\dog_last_vid.mp4">Video</a>
+            </div>
+          </div>
+          <div class="col card text-bg-dark">
+            <img src="pictures\car_pic.png" class="card-img" alt="..." />
+            <div class="card-img-overlay car-title">
+              <h5 class="card-title car-title">11 October 2023</h5>
+              <p class="card-text">Another sneakpeak on my doggies</p>
+              <a href="videos\PPG_car_video.mp4">Video</a>
             </div>
           </div>
         </div>
