--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="col card text-bg-dark">
             <img src="pictures\working_pic.png" class="card-img" alt="..." />
             <div class="card-img-overlay">
-              <h5 class="card-title">1 October 2023</h5>
+              <h5 class="card-title">- Daily Life -</h5>
               <p class="card-text">
                 A little narrative on my daily life activity
               </p>
@@ -52,7 +52,7 @@
           <div class="col card text-bg-dark">
             <img src="pictures\dog_pic.png" class="card-img" alt="..." />
             <div class="card-img-overlay">
-              <h5 class="card-title dog-title">5 October 2023</h5>
+              <h5 class="card-title dog-title">- My New Family -</h5>
               <p class="card-text">A sneakpeak on my extended family</p>
               <a href="videos\PPG_second_vid.mp4">Video</a>
             </div>
@@ -64,7 +64,7 @@
               alt="..."
             />
             <div class="card-img-overlay">
-              <h5 class="card-title">7 October 2023</h5>
+              <h5 class="card-title">- The Food -</h5>
               <p class="card-text">A short perspective on food</p>
               <a href="videos\PPG_video_FOOD.mp4">Video</a>
             </div>
@@ -76,15 +76,15 @@
               alt="..."
             />
             <div class="card-img-overlay">
-              <h5 class="card-title">11 October 2023</h5>
+              <h5 class="card-title">- Addition of New Family -</h5>
               <p class="card-text">Another sneakpeak on my doggies</p>
               <a href="videos\dog_last_vid.mp4">Video</a>
             </div>
           </div>
           <div class="col card text-bg-dark">
             <img src="pictures\car_pic.png" class="card-img" alt="..." />
-            <div class="card-img-overlay car-title">
-              <h5 class="card-title car-title">11 October 2023</h5>
+            <div class="card-img-overlay">
+              <h5 class="card-title car-title">- Car Broke -</h5>
               <p class="card-text">Another sneakpeak on my doggies</p>
               <a href="videos\PPG_car_video.mp4">Video</a>
             </div>
